[project]
name = "panllm"
description = "Unified inference for multiple LLMs for personal use"
version = "0.0.2"
readme = "README.md"
authors = [
    {name="Kadir Aksoy"},
]

classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

requires-python = ">=3.10"

license = "MIT"
license-files = ["LICENSE"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"